--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <h1>盲人摸象</h1>
+<ul>
+  <li>In the picture,there is an elephant on its side and six blind people with closed eyes.</li> 
+  <li>One person is reaching out to touch the elephant's nose,</li>
+  <li>the second person is reaching out to touch the elephant's ears,</li>
+  <li>the third person is reaching out to touch the elephant's teeth,</li>
+  <li>the fourth person is reaching out to touch the elephant's body,</li>
+  <li>the fifth person is reaching out to touch the elephant's legs,</li>
+  <li>and the last person is holding the elephant's tail.,</li>
+</ul>
+<img src="mrmx.png">
