--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
   <li>he carried a large bell on his back</li>
   <li>he covered his ears with his hands</li>
 </ul>
-<img src="mrmx.png">
+<img src="ye.png">
