--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head><title></title></head>
+<html>
+<head><title>滚啊风象星座（对庄睿纯恶意）</title></head>
+<body>
 <h1>掩耳盗铃</h1>
 <ul>
   <li>a man dressed in black</li> 
@@ -7,3 +9,5 @@
   <li>he covered his ears with his hands</li>
 </ul>
 <img src="ye.png">
+</body>
+</html>
