--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
-<head><title>滚啊风象星座（对庄睿纯恶意）</title></head>
+<head><title>to 江俊洁</title></head>
 <body>
-<h1>庄睿<mark>!!!</mark></h1>
-<h2>我 <strengthen>崔晨曦</strengthen> 正式向你 <mark>宣战</mark>！</h2>
+<h1>江俊洁<mark>!!!</mark></h1>
+<h2>我 <strengthen>崔晨曦</strengthen> 会永远 <mark>监视你</mark>！</h2>
 <ul>
-  <li>饿了就吃饭</li> 
-  <li>视奸被我发现</li>
-  <li>我会永远监视你</li>
-  <li>挨打！</li>
+  <li>崔晨曦大王驾到</li> 
+  <li>小江子速速迎接</li>
+  <li>不听话挨打！</li>
 </ul>
   <img src="shi.png">
   <img src="qiang.png">
