--- a/audio.html
+++ b/audio.html
@@ -1,1 +1,97 @@
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2638631898&auto=1&height=66"></iframe>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>盲人摸象 - 文生图展示</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #f4f4f4, #ddd);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      width: 80%;
+      max-width: 600px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #333;
+      margin: 0 0 20px;
+    }
+    .ruby {
+      display: inline-block;
+      margin: 0 5px;
+    }
+    .ruby > rt {
+      font-size: 0.6em;
+      position: relative;
+      top: -0.8em;
+      color: #666;
+    }
+    p {
+      color: #555;
+      margin-bottom: 1em;
+    }
+    .image-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .description {
+      margin-bottom: 20px;
+    }
+    .description strong {
+      color: #007BFF;
+    }
+    .process {
+      margin: 20px 0;
+    }
+    .process ol {
+      margin: 20px 0;
+      padding-left: 20px;
+      color: #333;
+    }
+    .process li {
+      margin: 5px 0;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1><span class="ruby"><ruby>盲<rt>máng</rt></ruby></span><span class="ruby"><ruby>人<rt>rén</rt></ruby></span><span class="ruby"><ruby>摸<rt>mō</rt></ruby></span><span class="ruby"><ruby>象<rt>xiàng</rt></ruby></span></h1>
+    <div class="description">
+      <p>这个成语故事讲述了几个<strong>盲人</strong>通过触摸<strong>大象</strong>的不同部位来猜测<strong>大象</strong>的样子，但每个人都只摸到了<strong>大象</strong>的一部分，因此他们对<strong>大象</strong>的描述各不相同。这个故事告诉我们，看待问题要全面，不能只看到事物的一小部分就下结论。</p>
+    </div>
+    <div class="image-container">
+      <img src="path_to_your_image.jpg" alt="盲人摸象的文生图">
+      <p><strong>文生图：</strong>盲人摸象</p>
+    </div>
+    <div class="process">
+      <p><strong>生成过程简述：</strong></p>
+      <ol>
+        <li>确定成语“盲人摸象”的主题和场景。</li>
+        <li>使用文生图工具或软件，输入关键词“盲人摸象”。</li>
+        <li>调整参数，如风格、色彩等，以获得满意的视觉效果。</li>
+        <li>生成图片并保存。</li>
+        <li>将图片上传到GitHub Pages，并在页面中引用图片路径。</li>
+      </ol>
+    </div>
+  </div>
+</body>
+</html>
