--- a/audio.html
+++ b/audio.html
@@ -79,7 +79,7 @@
       <p>这个成语故事讲述了几个<strong>盲人</strong>通过触摸<strong>大象</strong>的不同部位来猜测<strong>大象</strong>的样子，但每个人都只摸到了<strong>大象</strong>的一部分，因此他们对<strong>大象</strong>的描述各不相同。这个故事告诉我们，看待问题要全面，不能只看到事物的一小部分就下结论。</p>
     </div>
     <div class="image-container">
-      <img src="path_to_your_image.jpg" alt="盲人摸象的文生图">
+      <img src="mrmx.jpg" alt="盲人摸象的文生图">
       <p><strong>文生图：</strong>盲人摸象</p>
     </div>
     <div class="process">
