--- a/audio.html
+++ b/audio.html
@@ -85,11 +85,12 @@
     <div class="process">
       <p><strong>生成过程简述：</strong></p>
       <ol>
-        <li>确定成语“盲人摸象”的主题和场景。</li>
-        <li>使用文生图工具或软件，输入关键词“盲人摸象”。</li>
-        <li>调整参数，如风格、色彩等，以获得满意的视觉效果。</li>
+        <li>在百度查阅成语“盲人摸象”的含义与场景。</li>
+        <li>使用liblibAI文生图工具，设置相关关键词，调整参数，如风格、色彩等，以获得满意的视觉效果。</li>
         <li>生成图片并保存。</li>
-        <li>将图片上传到GitHub Pages，并在页面中引用图片路径。</li>
+        <li>将图片上传到GitHub。</li>
+        <li>运用成组元素、文档级别元素等所学内容编辑代码。</li>
+        <li>利用AI工具进行美化。</li>
       </ol>
     </div>
   </div>
