--- a/v.html
+++ b/v.html
@@ -28,6 +28,7 @@
       border-radius: 10px;
       overflow: hidden;
       margin-bottom: 20px;
+      aspect-ratio: 9/16; /* Adjusted to match 9:16 aspect ratio */
     }
     iframe {
       width: 100%;
@@ -53,21 +54,21 @@
       transition: background-color 0.3s;
     }
     .cta:hover {
-      background-color: #45cb85c;
+      background-color: #4cb85c;
     }
     .cta:active {
-      background-color: #45a945b;
+      background-color: #459b54;
     }
   </style>
 </head>
 <body>
   <h1>守株待兔 - 等待奇迹，还是自力更生？</h1>
   <div class="video-container">
-    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113594284907207&bvid=BV1jNi2YXE3d&cid=27177715800&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=900764780&bvid=BV19N4y1N743&cid=1333631075&p=1" scrolling="no" frameborder="no" allowfullscreen="true"></iframe>
   </div>
   <div class="description">
-    <p>这个成语故事讲述了一个农夫偶然在田边捡到一只撞死在树桩上的兔子，之后他便放弃耕作，每天守在树桩旁等待奇迹再次发生。这个故事告诉我们，依赖偶然的好运是不可靠的，只有通过自己的努力才能获得稳定的成果。</p>
+    <p>守株待兔，一个农夫偶然捡到撞死在树桩上的兔子，便放弃耕作，守株待兔。<br>这告诉我们，依赖好运不可靠，努力才能获得稳定成果。</p>
   </div>
-  <button class="cta" onclick="alert('感谢您的点击！欢迎您探索更多成语故事！')">探索更多成语故事</button>
+  <button class="cta" onclick="alert('感谢您的点击！探索更多成语故事。')">探索更多成语故事</button>
 </body>
 </html>
