--- a/v.html
+++ b/v.html
@@ -15,24 +15,28 @@
       align-items: center;
       height: 100vh;
       flex-direction: column;
-   }
-   h1 {
+    }
+    h1 {
       font-size: 2.5em;
       color: #4CAF50;
       margin-bottom: 20px;
     }
-   .video-container {
+    .video-container {
+      position: relative;
       width: 80%;
       max-width: 800px;
       border: 5px solid #4CAF50;
       border-radius: 10px;
       overflow: hidden;
       margin-bottom: 20px;
-      aspect-ratio: 9/16; /* Adjusted to match 9:16 aspect ratio */
+      padding-top: 56.25%; /* 16:9 ratio */
     }
-    iframe {
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: auto;
+      height: 100%;
       border: none;
     }
     .description {
@@ -64,7 +68,7 @@
 <body>
   <h1>守株待兔 - 等待奇迹，还是自力更生？</h1>
   <div class="video-container">
-     <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113594284907207&bvid=BV1jNi2YXE3d&cid=27177715800&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=900764780&bvid=BV19N4y1N743&cid=1333631075&p=1" scrolling="no" frameborder="no" allowfullscreen="true"></iframe>
   </div>
   <div class="description">
     <p>守株待兔，一个农夫偶然捡到撞死在树桩上的兔子，便放弃耕作，守株待兔。<br>这告诉我们，依赖好运不可靠，努力才能获得稳定成果。</p>
