--- a/v.html
+++ b/v.html
@@ -22,7 +22,8 @@
       margin-bottom: 20px;
     }
    iframe {
-      width: 100%; /* Video will take full width of the container */
+      width: 80%;
+      max-width: 800px;
       border: none;
       margin-bottom: 20px;
     }
