--- a/v.html
+++ b/v.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #f0f8ff, #e6e6fa);
+      background: #f0f8ff;
       margin: 0;
       padding: 0;
       display: flex;
@@ -15,24 +15,29 @@
       align-items: center;
       height: 100vh;
       flex-direction: column;
+      color: #333;
    }
    h1 {
       font-size: 2.5em;
-      color: #4CAF50;
+      color: #333;
       margin-bottom: 20px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
    iframe {
       width: 80%;
       max-width: 800px;
       border: none;
       margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
    .description {
       font-size: 1.2em;
-      color: #333;
+      color: #555;
       text-align: center;
       line-height: 1.6;
-    }
+      margin-bottom: 30px;
+   }
    .cta {
       margin-top: 20px;
       padding: 10px 20px;
@@ -42,13 +47,14 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 1em;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
     }
     .cta:hover {
-      background-color: #4cb85c;
+      background-color: #45a049;
+      transform: scale(1.05);
     }
     .cta:active {
-      background-color: #459b54;
+      background-color: #398439;
     }
   </style>
 </head>
