--- a/hdp.html
+++ b/hdp.html
@@ -9,7 +9,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    touch-action: manipulation;
+    touch-action: pan-y; /* 允许垂直方向的触摸滚动 */
   }
   .slide {
     width: 100%;
@@ -37,20 +37,19 @@
   }
   .title {
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
   }
 </style>
 </head>
 <body>
 
 <div class="slide">
-  <div class="title" style="animation: slideUp 0.5s 0.5s forwards;">心想事成</div>
+  <div class="title">心想事成</div>
 </div>
 <div class="slide">
-  <div class="title" style="animation: slideDown 0.5s 0.5s forwards;">财源滚滚</div>
+  <div class="title">财源滚滚</div>
 </div>
 <div class="slide">
-  <div class="title" style="animation: accordion 2s 0.5s forwards;">学业有成</div>
+  <div class="title">学业有成</div>
 </div>
 
 <script>
@@ -61,30 +60,38 @@
   function updateSlide(index) {
     slides.forEach((slide, i) => {
       slide.style.opacity = i === index ? 1 : 0;
-      // 重置所有标题的动画状态
-      slide.querySelector('.title').style.animation = '';
     });
     // 为当前幻灯片的标题添加动画
-    if (slides[index].querySelector('.title')) {
-      slides[index].querySelector('.title').style.animation = `slideDown 0.5s ${0.5 + index * 0.5}s forwards`;
+    const title = slides[index].querySelector('.title');
+    title.style.opacity = 1;
+    if (index === 0) {
+      title.style.animation = 'slideUp 0.5s forwards';
+    } else if (index === 1) {
+      title.style.animation = 'slideDown 0.5s forwards';
+    } else if (index === 2) {
+      title.style.animation = 'accordion 2s forwards';
     }
   }
 
   document.addEventListener('touchstart', (e) => {
-    startY = e.touches[0].pageY;
+    if (e.touches.length === 1) { // 确保是单指操作
+      startY = e.touches[0].pageY;
+    }
   });
 
   document.addEventListener('touchend', (e) => {
-    const endY = e.touches[0].pageY;
-    const diff = startY - endY;
+    if (e.touches.length === 0) { // 确保触摸点已经离开屏幕
+      const endY = e.changedTouches[0].pageY;
+      const diff = startY - endY;
 
-    if (Math.abs(diff) > 100) {
-      if (diff > 0) {
-        currentIndex = (currentIndex + 1) % slides.length;
-      } else {
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      if (Math.abs(diff) > 100) {
+        if (diff > 0) {
+          currentIndex = (currentIndex + 1) % slides.length;
+        } else {
+          currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+        }
+        updateSlide(currentIndex);
       }
-      updateSlide(currentIndex);
     }
   });
 </script>
@@ -92,15 +99,15 @@
 <style>
   @keyframes slideUp {
     from { transform: translateY(100%); }
-    to { transform: translateY(-50%); }
+    to { transform: translateY(0); }
   }
   @keyframes slideDown {
     from { transform: translateY(-100%); }
-    to { transform: translateY(50%); }
+    to { transform: translateY(0); }
   }
   @keyframes accordion {
-    0%, 100% { height: 0; }
-    50% { height: 100%; }
+    from { height: 0; }
+    to { height: 100%; }
   }
 </style>
 
