--- a/hdp.html
+++ b/hdp.html
@@ -9,7 +9,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    touch-action: pan-y; /* 允许垂直方向的触摸滚动 */
+    touch-action: pan-y;
   }
   .slide {
     width: 100%;
@@ -37,6 +37,7 @@
   }
   .title {
     opacity: 0;
+    transition: opacity 0.5s ease-in-out;
   }
 </style>
 </head>
@@ -61,36 +62,40 @@
     slides.forEach((slide, i) => {
       slide.style.opacity = i === index ? 1 : 0;
     });
-    // 为当前幻灯片的标题添加动画
-    const title = slides[index].querySelector('.title');
-    title.style.opacity = 1;
-    if (index === 0) {
-      title.style.animation = 'slideUp 0.5s forwards';
-    } else if (index === 1) {
-      title.style.animation = 'slideDown 0.5s forwards';
-    } else if (index === 2) {
-      title.style.animation = 'accordion 2s forwards';
-    }
   }
 
   document.addEventListener('touchstart', (e) => {
-    if (e.touches.length === 1) { // 确保是单指操作
-      startY = e.touches[0].pageY;
-    }
+    startY = e.touches[0].pageY;
+  });
+
+  document.addEventListener('touchmove', (e) => {
+    e.preventDefault(); // 阻止默认滚动行为
   });
 
   document.addEventListener('touchend', (e) => {
-    if (e.touches.length === 0) { // 确保触摸点已经离开屏幕
-      const endY = e.changedTouches[0].pageY;
-      const diff = startY - endY;
+    const endY = e.changedTouches[0].pageY;
+    const diff = startY - endY;
 
-      if (Math.abs(diff) > 100) {
-        if (diff > 0) {
-          currentIndex = (currentIndex + 1) % slides.length;
-        } else {
-          currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        }
-        updateSlide(currentIndex);
+    if (Math.abs(diff) > 100) {
+      if (diff > 0) {
+        currentIndex = (currentIndex + 1) % slides.length;
+      } else {
+        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      }
+      updateSlide(currentIndex);
+    }
+  });
+
+  document.addEventListener('click', function() {
+    const title = document.querySelector('.slide:nth-child(' + (currentIndex + 1) + ') .title');
+    if (title) {
+      title.style.opacity = 1;
+      if (currentIndex === 0) {
+        title.style.animation = 'slideUp 0.5s forwards';
+      } else if (currentIndex === 1) {
+        title.style.animation = 'slideDown 0.5s forwards';
+      } else if (currentIndex === 2) {
+        title.style.animation = 'accordion 2s forwards';
       }
     }
   });
