--- a/hdp.html
+++ b/hdp.html
@@ -27,7 +27,7 @@
   }
   .slide:nth-child(1) {
     opacity: 1;
-    background-color: yellow;
+    background-color: red; /* 第一张幻灯片背景改为红色 */
   }
   .slide:nth-child(2) {
     background-color: green;
@@ -37,7 +37,7 @@
   }
   .title {
     font-size: 2em;
-    color: black; /* 设置标题颜色为黑色 */
+    color: black; /* 确保标题颜色与背景有足够的对比度 */
     opacity: 0;
   }
   .祝福文字 {
@@ -72,10 +72,6 @@
   function updateSlide(index) {
     slides.forEach((slide, i) => {
       slide.style.opacity = i === index ? 1 : 0;
-      slide.querySelector('.title').style.opacity = 0;
-      slide.querySelector('.祝福文字').style.opacity = 0;
-      slide.querySelector('.title').style.animation = '';
-      slide.querySelector('.祝福文字').style.animation = '';
     });
   }
 
@@ -106,7 +102,9 @@
     const title = currentSlide.querySelector('.title');
     const message = currentSlide.querySelector('.祝福文字');
 
+    title.style.opacity = 1; // 确保标题立即可见
     title.style.animation = 'slideDown 0.5s forwards';
+    message.style.opacity = 1; // 确保祝福文字立即可见
     message.style.animation = 'fadeIn 0.5s 0.5s forwards';
   });
 </script>
