--- a/hdp.html
+++ b/hdp.html
@@ -35,9 +35,17 @@
   .slide:nth-child(3) {
     background-color: blue;
   }
-  .title, .祝福文字 {
+  .title {
+    font-size: 2em;
+    color: black;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+  }
+  .祝福文字 {
+    font-size: 1em;
+    color: white;
+    opacity: 0;
+    text-align: center;
+    max-width: 80%;
   }
 </style>
 </head>
@@ -59,6 +67,7 @@
 <script>
   let currentIndex = 0;
   const slides = document.querySelectorAll('.slide');
+  let startY;
 
   function updateSlide(index) {
     slides.forEach((slide, i) => {
@@ -71,24 +80,43 @@
     const title = currentSlide.querySelector('.title');
     const message = currentSlide.querySelector('.祝福文字');
 
-    title.style.opacity = 1; // 设置标题可见
-    message.style.opacity = 1; // 设置祝福文字可见
-
-    // 为标题添加下滑动画
+    title.style.opacity = 1; // Ensure title is visible before animating
     title.style.animation = 'slideDown 0.5s forwards';
-    // 为祝福文字添加淡入动画
+    message.style.opacity = 1; // Ensure message is visible before animating
     message.style.animation = 'fadeIn 0.5s 0.5s forwards';
   }
 
-  document.addEventListener('click', () => {
-    if (currentIndex < slides.length) {
-      updateSlide(currentIndex);
-      playAnimation();
-      currentIndex++;
-      if (currentIndex >= slides.length) {
-        currentIndex = 0; // 重置索引，重新开始
+  document.addEventListener('touchstart', (e) => {
+    startY = e.touches[0].pageY;
+  });
+
+  document.addEventListener('touchmove', (e) => {
+    e.preventDefault();
+  });
+
+  document.addEventListener('touchend', (e) => {
+    const endY = e.changedTouches[0].pageY;
+    const diff = startY - endY;
+
+    if (Math.abs(diff) > 100) {
+      if (diff > 0) {
+        currentIndex = (currentIndex + 1) % slides.length;
+        if (currentIndex === 0) { // Reset for the second loop
+          updateSlide(currentIndex);
+          playAnimation();
+        }
+      } else {
+        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
       }
+      updateSlide(currentIndex);
     }
+  });
+
+  document.addEventListener('click', () => {
+    if (currentIndex !== 0) {
+      updateSlide(currentIndex);
+    }
+    playAnimation();
   });
 </script>
 
