--- a/hdp.html
+++ b/hdp.html
@@ -66,12 +66,16 @@
 
 <script>
   let currentIndex = 0;
+  let isAnimating = false;
   const slides = document.querySelectorAll('.slide');
-  let startY;
 
   function updateSlide(index) {
     slides.forEach((slide, i) => {
       slide.style.opacity = i === index ? 1 : 0;
+      slide.querySelector('.title').style.opacity = 0;
+      slide.querySelector('.祝福文字').style.opacity = 0;
+      slide.querySelector('.title').style.animation = '';
+      slide.querySelector('.祝福文字').style.animation = '';
     });
   }
 
@@ -80,44 +84,29 @@
     const title = currentSlide.querySelector('.title');
     const message = currentSlide.querySelector('.祝福文字');
 
-    title.style.opacity = 1; // Ensure title is visible before animating
     title.style.animation = 'slideDown 0.5s forwards';
-    message.style.opacity = 1; // Ensure message is visible before animating
     message.style.animation = 'fadeIn 0.5s 0.5s forwards';
   }
 
-  document.addEventListener('touchstart', (e) => {
-    startY = e.touches[0].pageY;
-  });
-
-  document.addEventListener('touchmove', (e) => {
-    e.preventDefault();
-  });
-
-  document.addEventListener('touchend', (e) => {
-    const endY = e.changedTouches[0].pageY;
-    const diff = startY - endY;
-
-    if (Math.abs(diff) > 100) {
-      if (diff > 0) {
-        currentIndex = (currentIndex + 1) % slides.length;
-        if (currentIndex === 0) { // Reset for the second loop
-          updateSlide(currentIndex);
-          playAnimation();
-        }
-      } else {
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-      }
-      updateSlide(currentIndex);
-    }
-  });
-
   document.addEventListener('click', () => {
-    if (currentIndex !== 0) {
+    if (!isAnimating) {
+      isAnimating = true;
+      updateSlide(currentIndex);
+      playAnimation();
+      setTimeout(() => {
+        isAnimating = false;
+      }, 1000); // Reset isAnimating after animations are done
+    }
+  });
+
+  function nextSlide() {
+    if (!isAnimating) { // Only advance slides when not animating
+      currentIndex = (currentIndex + 1) % slides.length;
       updateSlide(currentIndex);
     }
-    playAnimation();
-  });
+  }
+
+  setInterval(nextSlide, 3000); // Change slide every 3 seconds
 </script>
 
 <style>
